added update number functionality
